Rename translation to the proper namespace

--- a/src/main/resources/theme-resources/resources/partials/realm-identity-provider-cieid.html
+++ b/src/main/resources/theme-resources/resources/partials/realm-identity-provider-cieid.html
@@ -293,39 +293,39 @@
                 <kc-tooltip>{{:: 'identity-provider.allowed-clock-skew.tooltip' | translate}}</kc-tooltip>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="attributeConsumingServiceIndex">{{:: 'identity-provider.saml.attribute-consuming-service-index' | translate}}</label>
+                <label class="col-md-2 control-label" for="attributeConsumingServiceIndex">{{:: 'identity-provider.cieid.attribute-consuming-service-index' | translate}}</label>
                 <div class="col-md-6">
                     <input class="form-control" string-to-number type="number" min="0" max="2147483" step="1" ng-model="identityProvider.config.attributeConsumingServiceIndex" id="attributeConsumingServiceIndex"/>
                 </div>
-                <kc-tooltip>{{:: 'identity-provider.saml.attribute-consuming-service-index.tooltip' | translate}}</kc-tooltip>
+                <kc-tooltip>{{:: 'identity-provider.cieid.attribute-consuming-service-index.tooltip' | translate}}</kc-tooltip>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="attributeConsumingServiceNames">{{:: 'identity-provider.saml.attribute-consuming-service-names' | translate}}</label>
+                <label class="col-md-2 control-label" for="attributeConsumingServiceNames">{{:: 'identity-provider.cieid.attribute-consuming-service-names' | translate}}</label>
                 <div class="col-md-6">
                     <input class="form-control" id="attributeConsumingServiceNames" type="text" ng-model="identityProvider.config.attributeConsumingServiceNames"/>
                 </div>
-                <kc-tooltip>{{:: 'identity-provider.saml.attribute-consuming-service-names.tooltip' | translate}}</kc-tooltip>
+                <kc-tooltip>{{:: 'identity-provider.cieid.attribute-consuming-service-names.tooltip' | translate}}</kc-tooltip>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="organizationNames">{{:: 'identity-provider.saml.organization-names' | translate}}</label>
+                <label class="col-md-2 control-label" for="organizationNames">{{:: 'identity-provider.cieid.organization-names' | translate}}</label>
                 <div class="col-md-6">
                     <input class="form-control" id="organizationNames" type="text" ng-model="identityProvider.config.organizationNames"/>
                 </div>
-                <kc-tooltip>{{:: 'identity-provider.saml.organization-names.tooltip' | translate}}</kc-tooltip>
+                <kc-tooltip>{{:: 'identity-provider.cieid.organization-names.tooltip' | translate}}</kc-tooltip>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="organizationDisplayNames">{{:: 'identity-provider.saml.organization-display-names' | translate}}</label>
+                <label class="col-md-2 control-label" for="organizationDisplayNames">{{:: 'identity-provider.cieid.organization-display-names' | translate}}</label>
                 <div class="col-md-6">
                     <input class="form-control" id="organizationDisplayNames" type="text" ng-model="identityProvider.config.organizationDisplayNames"/>
                 </div>
-                <kc-tooltip>{{:: 'identity-provider.saml.organization-display-names.tooltip' | translate}}</kc-tooltip>
+                <kc-tooltip>{{:: 'identity-provider.cieid.organization-display-names.tooltip' | translate}}</kc-tooltip>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="organizationUrls">{{:: 'identity-provider.saml.organization-urls' | translate}}</label>
+                <label class="col-md-2 control-label" for="organizationUrls">{{:: 'identity-provider.cieid.organization-urls' | translate}}</label>
                 <div class="col-md-6">
                     <input class="form-control" id="organizationUrls" type="text" ng-model="identityProvider.config.organizationUrls"/>
                 </div>
-                <kc-tooltip>{{:: 'identity-provider.saml.organization-urls.tooltip' | translate}}</kc-tooltip>
+                <kc-tooltip>{{:: 'identity-provider.cieid.organization-urls.tooltip' | translate}}</kc-tooltip>
             </div>
         </fieldset>
         <fieldset>
