--- a/src/main/resources/theme-resources/resources/partials/realm-identity-provider-cieid.html
+++ b/src/main/resources/theme-resources/resources/partials/realm-identity-provider-cieid.html
@@ -126,10 +126,10 @@
                 <label class="col-md-2 control-label">{{:: 'endpoints' | translate}}</label>
                 <div class="col-md-6">
                     <div>
-                        <a class="form-control" ng-href="{{callbackUrl}}{{identityProvider.alias}}/endpoint/descriptor" target="_blank">{{:: 'identity-provider.saml.protocol-endpoints.saml' | translate}}</a>
+                        <a class="form-control" ng-href="{{callbackUrl}}{{identityProvider.alias}}/endpoint/descriptor" rel="noopener noreferrer" target="_blank">{{:: 'identity-provider.saml.protocol-endpoints.saml' | translate}}</a>
                     </div>
                     <div>
-                        <a class="form-control" ng-href="{{authUrl}}/realms/{{realm.realm}}/cieid-sp-metadata" target="_blank"
+                        <a class="form-control" ng-href="{{authUrl}}/realms/{{realm.realm}}/cieid-sp-metadata" rel="noopener noreferrer" target="_blank"
                            title="{{:: 'identity-provider.cieid.protocol-endpoints.saml.tooltip' | translate}}">{{:: 'identity-provider.cieid.protocol-endpoints.saml' | translate}}</a>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
             <div class="form-group">
                 <label class="col-md-2 control-label" for="attributeConsumingServiceIndex">{{:: 'identity-provider.saml.attribute-consuming-service-index' | translate}}</label>
                 <div class="col-md-6">
-                    <input class="form-control" string-to-number type="number" min="0" max="2147483" step="1" ng-model="identityProvider.config.attributeConsumingServiceIndex" id="attributeConsumingServiceIndex"/>
+                    <input class="form-control" string-to-number type="number" min="0" max="65535" step="1" ng-model="identityProvider.config.attributeConsumingServiceIndex" id="attributeConsumingServiceIndex"/>
                 </div>
                 <kc-tooltip>{{:: 'identity-provider.saml.attribute-consuming-service-index.tooltip' | translate}}</kc-tooltip>
             </div>
