--- a/src/main/resources/theme-resources/resources/partials/realm-identity-provider-cieid.html
+++ b/src/main/resources/theme-resources/resources/partials/realm-identity-provider-cieid.html
@@ -295,6 +295,13 @@
                 <kc-tooltip>{{:: 'identity-provider.saml.sign-sp-metadata.tooltip' | translate}}</kc-tooltip>
             </div>
             <div class="form-group">
+                <label class="col-md-2 control-label" for="realmKeysProviderId">{{:: 'identity-provider.cieid.realm-keys-provider-id' | translate}}</label>
+                <div class="col-md-6">
+                    <input class="form-control" id="realmKeysProviderId" type="text" ng-model="identityProvider.config.realmKeysProviderId"/>
+                </div>
+                <kc-tooltip>{{:: 'identity-provider.cieid.realm-keys-provider-id.tooltip' | translate}}</kc-tooltip>
+            </div>
+            <div class="form-group">
                 <label class="col-sm-2 control-label" for="loginHint">{{:: 'saml.loginHint' | translate}}</label>
                 <div class="col-sm-4">
                     <input ng-model="identityProvider.config.loginHint" id="loginHint" onoffswitchvalue on-text="{{:: 'onText' | translate}}" off-text="{{:: 'offText' | translate}}" />
